--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -198,7 +198,8 @@ button.skill-button:hover {
 
 .project-container-image img {
   position: absolute;
-  height: 100%;
+  max-width: 55%;
+  max-height: 100%;
   bottom: 0;
   right: 0;
 }
