--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,6 +16,9 @@ $skill-ligher: #5098bf;
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -112,13 +115,14 @@ button.secondary {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 100px;
   padding: 100px 100px;
   background-color: $priamry-darker;
 }
 
 .skills-container {
-  max-width: 1000px;
+  width: 1000px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 1rem;
@@ -198,14 +202,28 @@ button.skill-button:hover {
 
 .project-container-image img {
   position: absolute;
-  max-width: 55%;
-  max-height: 100%;
   bottom: 0;
   right: 0;
 }
 
+.project-img {
+  max-width: 55%;
+  max-height: 100%;
+  z-index: 1;
+}
+
+.blob-img {
+  position: absolute;
+  bottom: -170px;
+  right: -70px;
+  height: 530px;
+  width: 550px;
+  z-index: 0;
+  
+}
+
 .project-container-image svg {
-  height: 100%;
+  max-height: 100% !important;
 }
 
 .project-container a {
