--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -33,6 +33,14 @@ p {
   color: white;
 }
 
+a {
+  color: rgb(200, 200, 200);
+  text-decoration: none;
+}
+a:visited {
+  color: rgb(200, 200, 200);
+}
+
 ul {
   list-style-position: inside;
 }
@@ -72,6 +80,31 @@ button.secondary {
   color: $primary-accent;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: $primary;
+  z-index: 10;
+}
+
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1100px;
+  max-width: 100%;
+  height: 70px;
+  padding: 0 3rem;
+}
+
+.header-links {
+  display: flex;
+  gap: 4rem;
+}
+
 .top-section {
   display: flex;
   align-items: center;
@@ -84,6 +117,10 @@ button.secondary {
   button {
     margin-right: 0.8rem;
   }
+}
+
+.top-section-text-container {
+  min-width: fit-content;
 }
 
 .top-section-background {
@@ -108,6 +145,7 @@ button.secondary {
   justify-content: center;
   align-items: center;
   height: 300px;
+  padding: 3rem;
   background-color: $priamry-ligher;
 }
 
@@ -136,11 +174,17 @@ button.secondary {
   background-color: $priamry-darker;
 }
 
+.technologies-section {
+  width: fit-content;
+}
+
 .skills-container {
   width: 1000px;
+  max-width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 1rem;
+  row-gap: 4rem;
 }
 
 .skills-column {
@@ -186,7 +230,7 @@ button.skill-button {
   border-radius: 0 0.5rem 0.5rem 0;
   border: none;
   transition: 0.2s cubic-bezier(0.37, 0.185, 0.78, 0.105);
-  z-index: 100;
+  z-index: 2;
   text-align: right;
 }
 
@@ -199,6 +243,7 @@ button.skill-button:hover {
   position: relative;
   display: flex;
   width: 1000px;
+  max-width: 100%;
   padding: 5rem;
   margin-bottom: 5rem;
   border-radius: 1rem;
@@ -209,6 +254,7 @@ button.skill-button:hover {
   display: flex;
   flex-direction: column;
   max-width: 40%;
+  z-index: 2;
 }
 
 .project-container-image {
@@ -288,13 +334,6 @@ footer {
     gap: 0.5rem;
     padding-left: 2rem;
   }
-  a {
-    color: rgb(200, 200, 200);
-    text-decoration: none;
-  }
-  a:visited {
-    color: rgb(200, 200, 200);
-  }
   a:hover {
     text-decoration: underline;
   }
@@ -315,3 +354,5 @@ footer {
     padding: 0.5rem;
   }
 }
+
+@import './responsive.scss';
