--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -6,7 +6,7 @@
 
     .top-section-image-container {
         max-width: 50%;
-        img {
+        svg {
           max-width: 100%;
         }
       }
