--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -20,6 +20,10 @@
         width: 800px;
         padding: 4rem 4rem;
     }
+
+    .arrow-container {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 900px) {
