--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@200;300;400;500;600;700&display=swap');
 
 $primary: #191d25;
 $priamry-darker: #141618;
@@ -12,7 +12,7 @@ $skill-ligher: #5098bf;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .App {
@@ -61,6 +61,7 @@ ul {
   margin-bottom: 50px;
 }
 
+
 .h1-larger {
   font-size: 270%;
 }
@@ -79,10 +80,6 @@ button {
 button.secondary {
   background-color: transparent;
   color: $primary-accent;
-}
-
-button:hover {
-  
 }
 
 header {
@@ -162,7 +159,7 @@ img.header-flag {
   justify-content: center;
   min-height: 80vh;
   width: 100%;
-  gap: 7rem;
+  gap: 4.5rem;
   padding-top: 4rem;
   background-color: $primary;
   overflow: hidden;
@@ -253,6 +250,7 @@ img.header-flag {
   background-color: $skill-primary;
   border-radius: 0.5rem;
   overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px;
   i {
     color: white;
   }
@@ -265,6 +263,7 @@ img.header-flag {
   padding: 1rem 2rem;
   background-color: $skill-primary;
   border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px;
   .font-ligher {
     z-index: 1;
   }
@@ -294,20 +293,23 @@ button.skill-button:hover {
 .project-container {
   position: relative;
   display: flex;
-  width: 1000px;
+  width: 1020px;
   max-width: 100%;
   padding: 5rem;
   margin-bottom: 5rem;
   border-radius: 1rem;
   overflow: hidden;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 50px
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 15px 25px
 }
 
 .project-container-text {
   display: flex;
   flex-direction: column;
-  max-width: 40%;
+  max-width: 42%;
   z-index: 2;
+  p.font-smaller {
+    padding-right: 2rem;
+  }
 }
 
 .project-container-image {
