--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -17,14 +17,14 @@
 }
 
 .svg-blob {
-    animation: moveBg 10s;
+    animation: moveBg 12s;
     transform-origin: center center;
     transform-box: fill-box;
     transform: scale(95%) rotate(10deg);
 }
 
 .svg-window {
-    animation: showWindow 3s linear;
+    animation: showWindow 2s linear;
     transform-origin: bottom center;
     transform-box: fill-box;
 }
@@ -39,7 +39,7 @@
 
 #line1 {
     animation: writeLine 1s steps(8, end);
-    animation-delay: 3s;
+    animation-delay: 2.5s;
     animation-fill-mode: forwards;
 }
 
@@ -69,37 +69,37 @@
 
 #line6 {
     animation: writeLine 2s steps(6, end);
-    animation-delay: 20s;
+    animation-delay: 18s;
     animation-fill-mode: forwards;
 }
 
 #line7 {
     animation: writeLine 2s steps(6, end);
-    animation-delay: 22s;
+    animation-delay: 20s;
     animation-fill-mode: forwards;
 }
 
 #line8 {
     animation: writeLine 2s steps(6, end);
-    animation-delay: 24s;
+    animation-delay: 22s;
     animation-fill-mode: forwards;
 }
 
 #line9 {
     animation: writeLine 2s steps(6, end);
-    animation-delay: 26s;
+    animation-delay: 24s;
     animation-fill-mode: forwards;
 }
 
 #line10 {
     animation: writeLine 2s steps(6, end);
-    animation-delay: 28s;
+    animation-delay: 26s;
     animation-fill-mode: forwards;
 }
 
 #line11 {
     animation: writeLine 2s steps(6, end);
-    animation-delay: 30s;
+    animation-delay: 28s;
     animation-fill-mode: forwards;
 }
 
@@ -110,7 +110,7 @@
 }
 
 #browser {
-    animation: showBrowser 7s linear;
+    animation: showBrowser 5s linear;
     animation-delay: 12s;
     transform: scale(0);
     transform-origin: bottom left;
@@ -142,7 +142,6 @@
     transform-origin: bottom bottom;
 }
 
-
 @keyframes movePlant {
     20% {
       transform: rotate(-10deg);
@@ -165,6 +164,9 @@
     0% {
       transform: scale(90%) rotate(10deg);
     }
+    10% {
+        transform: scale(90%) rotate(10deg);
+      }
     50% {
       transform: scale(100%) rotate(0deg);
     }
