--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@200;300;400;500;600;700&display=swap');
 
-$primary: #191d25;
+$primary: #000000;
 $priamry-darker: #141618;
 $priamry-ligher: #242a36;
-$primary-accent: #7f93bd;
+$primary-accent: #06D6A0;
+$primary-second-accent: #1860A5;
 
 $skill-primary: #191d25;
 $skill-ligher: #5098bf;
@@ -30,17 +31,17 @@ h4,
 h5,
 h6,
 p {
-  color: white;
+  color: rgb(30, 30, 30);
 }
 
 a {
-  color: rgb(200, 200, 200);
+  color: white;
   text-decoration: none;
   transition: 0.2s ease-out;
 }
 
 a:visited {
-  color: rgb(200, 200, 200);
+  color: white;
 }
 
 ul {
@@ -58,7 +59,7 @@ ul {
 .h1-outline {
   font-size: 300%;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #32353b;
+  -webkit-text-stroke-color: #bebebe;
   color: transparent;
   margin-bottom: 50px;
 }
@@ -69,10 +70,10 @@ ul {
 }
 
 button {
-  border: 3px solid $primary-accent;
-  background-color: $primary-accent;
+  border: 3px solid $primary-second-accent;
+  background-color: $primary-second-accent;
   padding: 0.4rem 1rem;
-  border-radius: 5px;
+  border-radius: 0.2rem;
   color: white;
   font-weight: 700;
   cursor: pointer;
@@ -81,7 +82,7 @@ button {
 
 button.secondary {
   background-color: transparent;
-  color: $primary-accent;
+  color: $primary-second-accent;
 }
 
 header {
@@ -90,14 +91,15 @@ header {
   display: flex;
   justify-content: center;
   width: 100%;
-  background-color: $primary;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(4px);
   z-index: 10;
-  opacity: 0.9;
+  opacity: 1;
 }
 
 header, footer {
   a:hover {
-    color: #7f93bd;
+    color: $primary-accent;
   }
 }
 
@@ -109,6 +111,9 @@ header, footer {
   max-width: 100%;
   height: 70px;
   padding: 0 3rem;
+  p {
+    color: white
+  }
 }
 
 .header-links {
@@ -134,7 +139,7 @@ img.header-flag {
   left: -0.8rem;
   flex-direction: column;
   background-color: $priamry-ligher;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
   
 }
 
@@ -167,6 +172,9 @@ img.header-flag {
   overflow: hidden;
   button {
     margin-right: 0.8rem;
+  }
+  h1 {
+    color: white;
   }
 }
 
@@ -207,7 +215,6 @@ img.header-flag {
   align-items: center;
   height: 300px;
   padding: 3rem;
-  background-color: $priamry-ligher;
 }
 
 .below-top-inner {
@@ -232,7 +239,6 @@ img.header-flag {
   align-items: center;
   gap: 100px;
   padding: 100px 100px;
-  background-color: $priamry-darker;
 }
 
 .technologies-section {
@@ -259,12 +265,12 @@ img.header-flag {
   width: 100%;
   padding: 3rem 2rem;
   margin-bottom: 0.3rem;
-  background-color: $skill-primary;
-  border-radius: 0.5rem;
+  background-color: white;
+  border-radius: 0.2rem;
   overflow: hidden;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px;
+  box-shadow: rgba(200, 200, 200, 0.4) 0px 2px 5px;
   i {
-    color: white;
+    color: rgb(30, 30, 30);
   }
 }
 
@@ -273,9 +279,9 @@ img.header-flag {
   display: flex;
   width: 100%;
   padding: 1rem 2rem;
-  background-color: $skill-primary;
-  border-radius: 0.5rem;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px;
+  background-color: white;
+  border-radius: 0.2rem;
+  box-shadow: rgba(200, 200, 200, 0.4) 0px 2px 5px;
   .font-ligher {
     z-index: 1;
   }
@@ -288,9 +294,9 @@ button.skill-button {
   height: 100%;
   width: 60px;
   padding-right: 25px;
-  color: #5098bf;
-  background-color: rgba(0, 142, 222, 0.17);
-  border-radius: 0 0.5rem 0.5rem 0;
+  color: $primary-accent;
+  background-color: rgba(6, 214, 158, 0.2);
+  border-radius: 0 0.2rem 0.2rem 0;
   border: none;
   transition: 0.2s cubic-bezier(0.37, 0.185, 0.78, 0.105);
   z-index: 2;
@@ -299,7 +305,7 @@ button.skill-button {
 
 button.skill-button:hover {
   width: 100%;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
 }
 
 .project-container {
@@ -309,9 +315,9 @@ button.skill-button:hover {
   max-width: 100%;
   padding: 5rem;
   margin-bottom: 5rem;
-  border-radius: 1rem;
+  border-radius: 0.2rem;
   overflow: hidden;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 15px 25px
+  box-shadow: rgba(150, 150, 150, 0.1) 0px 15px 25px
 }
 
 .project-container-text {
@@ -335,8 +341,8 @@ button.skill-button:hover {
 }
 
 .project-img {
-  max-width: 55%;
-  max-height: 100%;
+  height: 100%;
+  max-width: auto;
   z-index: 1;
 }
 
@@ -359,7 +365,7 @@ button.skill-button:hover {
   color: white;
   font-size: 80%;
   text-decoration: none;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
 }
 
 .project-container-buttons {
@@ -384,11 +390,11 @@ button.skill-button:hover {
 }
 
 .project-technologies-container span {
-  color: white;
+  color: black;
   font-size: 50%;
   padding: 0.25rem 0.7rem;
   margin: 0.7rem 0 1.5rem 0;
-  border-radius: 0.2rem;
+  border-radius: 0.1rem;
 }
 
 footer {
