--- a/src/styles/singleProject.scss
+++ b/src/styles/singleProject.scss
@@ -29,7 +29,6 @@
 }
 
 .single-project-description {
-    height: 56vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -40,4 +39,11 @@
     hr {
         margin: 1rem 0;
     }
+}
+
+.single-project-bottom-container {
+    width: 100%;
+    height: 450px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
