--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,15 +22,6 @@ $skill-ligher: #5098bf;
   justify-content: center;
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
   color: rgb(30, 30, 30);
 }
 
@@ -429,6 +420,7 @@ footer {
   align-items: center;
   padding: 4rem 0;
   font-size: 90%;
+  color: white;
   background-color: $primary;
 }
 
