--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -60,6 +60,10 @@ ul {
   font-size: 270%;
 }
 
+.color-lighter {
+  color: rgb(90, 90, 90);
+}
+
 button {
   border: 3px solid $primary-second-accent;
   background-color: $primary-second-accent;
@@ -98,10 +102,10 @@ header, footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1100px;
+  width: 1440px;
   max-width: 100%;
   height: 70px;
-  padding: 0 3rem;
+  padding: 0 5rem;
   p {
     color: white
   }
@@ -322,9 +326,7 @@ button.skill-button:hover {
   position: absolute;
   width: 100%;
   height: 100%;
-  transform: translateX(-50%);
   top:0;
-  left: 50%;
   background-color: inherit;
   border-radius: inherit;
 }
@@ -378,6 +380,7 @@ button.skill-button:hover {
   font-size: 80%;
   text-decoration: none;
   border-radius: 0.2rem;
+  transition: ease-in 200ms;
 }
 
 .project-container-text button {
