--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -209,8 +209,8 @@ img.header-flag {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 400px;
-  margin: 50px 0;
+  height: 350px;
+  margin-top: 50px;
 }
 
 .below-top-inner {
@@ -438,8 +438,11 @@ button.skill-button:hover {
 }
 
 .contact-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  padding-bottom: 200px;
+  padding-bottom: 150px;
   color: white;
 }
 
@@ -456,9 +459,10 @@ button.skill-button:hover {
   position: relative;
   display: flex;
   justify-content: center;
+  height: 450px;
+  width: 1020px;
+  border-radius: 5px;
   background-color: $primary;
-  height: 400px;
-  width: 100%;
 }
 
 .shape-left {
@@ -473,7 +477,7 @@ button.skill-button:hover {
 .shape-right {
   position: absolute;
   right: 20px;
-  top: 230px;
+  top: 280px;
   max-width: 220px;
   svg {
     max-width: 120px;
@@ -485,7 +489,7 @@ button.skill-button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 9rem;
+  gap: 4rem;
   width: 1020px;
   .contact-svg {
     width: 27%;
@@ -501,10 +505,18 @@ button.skill-button:hover {
   flex-direction: column;
   z-index: 2;
   width: 38%;
-  h1 {
+  h2 {
     font-weight: 500;
     margin-bottom: 0.2rem;
     line-height: 140%;
+  }
+  h2:before{
+    content: '';
+    padding: 0 0.15em;
+    height: 0.2rem;
+    margin-right: 0.4rem;
+    background-color: $primary-accent;
+    border-radius: 1rem;
   }
   h3 {
     font-weight: 400;
@@ -528,7 +540,6 @@ footer {
   flex-direction: column;
   align-items: center;
   padding: 4rem 0;
-  font-size: 90%;
   color: white;
   background-color: $primary;
 }
@@ -539,6 +550,12 @@ footer {
   grid-template-columns: 2fr 1fr 1fr;
   column-gap: 6rem;
   padding: 0 5rem;
+  h3 {
+    font-weight: 500;
+  }
+  p, a {
+    color: rgb(190, 190, 190);
+  }
   div {
     display: flex;
     flex-direction: column;
