--- a/src/styles/singleProject.scss
+++ b/src/styles/singleProject.scss
@@ -28,11 +28,7 @@
 .project-video-container {
     display: flex;
     justify-content: center;
-    position: absolute;
-    right: 50px;
-    bottom: 20px;
-    width: 650px;
-    z-index: 5;
+    margin-bottom: 20px;
 }
 
 
