--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -409,6 +409,7 @@ button.skill-button:hover {
 }
 
 .project-container-buttons {
+  width: fit-content;
   display: flex;
   gap: 1rem;
 }
@@ -442,6 +443,7 @@ button.skill-button:hover {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  max-width: 100%;
   padding-bottom: 150px;
   color: white;
 }
@@ -460,7 +462,9 @@ button.skill-button:hover {
   display: flex;
   justify-content: center;
   height: 450px;
+  max-height: fit-content;
   width: 1020px;
+  max-width: 100%;
   border-radius: 5px;
   background-color: $primary;
 }
