--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -24,6 +24,14 @@
     .arrow-container {
         display: none;
     }
+
+    .contact-inner {
+        width: 800px;
+    }
+
+    .contact-inner-wrapper {
+        justify-content: space-around;
+    }
 }
 
 @media only screen and (max-width: 900px) {
@@ -32,14 +40,32 @@
     }
 
     .project-container {
-        width: 700px;
+        width: 650px;
         padding: 3rem;
+        flex-direction: column-reverse;
+        height: fit-content;
+        padding: 2rem 2rem;
+        svg {
+            display: none;
+        }
+    }
+
+    .project-container-image {
+        img {
+            max-width: 50%;
+            height: auto;
+            top: 0;
+        }
     }
 
     .blob-img {
         height: 430px;
         width: 420px;
-      }
+    }
+
+    .contact-inner {
+        width: 650px;
+    }
 }
 
 @media only screen and (max-width: 650px) {
@@ -68,12 +94,7 @@
     }
 
     .project-container {
-        flex-direction: column-reverse;
         width: 100%;
-        padding: 2rem 2rem;
-        svg {
-            display: none;
-        }
     }
 
     .project-container-buttons {
@@ -83,6 +104,7 @@
     }
 
     .project-container-text {
+        width: 100%;
         max-width: 100%;
         padding: 2rem;
     }
@@ -90,5 +112,28 @@
     .project-container-image img {
         position: relative;
         max-width: 90%;
+    }
+
+    .contact-inner {
+        width: 65%;
+        min-width: 350px;
+    }
+
+    .contact-inner-wrapper {
+        flex-direction: column;
+        justify-content: center;
+        gap: 0.5rem;
+    }
+
+    .contact-svg {
+        width: fit-content !important;
+        svg {
+            max-width: 150px;
+        }
+        
+    }
+
+    .contact-text {
+        width: 60%;
     }
 }
