pictures for tablerplus

--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -39,6 +39,10 @@
         font-size: 0.8rem;
     }
 
+    .below-top-inner {
+        flex-direction: column;
+    }
+
     .project-container {
         width: 650px;
         padding: 3rem;
