--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -549,11 +549,11 @@ footer {
 }
 
 .footer-links {
-  max-width: 1200px;
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
-  column-gap: 6rem;
-  padding: 0 5rem;
+  max-width: 100%;
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 7rem 0 4rem;
   h3 {
     font-weight: 500;
   }
@@ -569,8 +569,9 @@ footer {
 }
 
 .footer-bottom {
+  max-width: 100%;
   width: 1200px;
-  padding-top: 4rem;
+  padding: 4rem 1rem;
   p, h3 {
     color: #484c53;
   }
