--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -70,6 +70,10 @@
     .contact-inner {
         width: 650px;
     }
+
+    .single-project-bottom-inner {
+        flex-direction: column;
+    }
 }
 
 @media only screen and (max-width: 650px) {
