--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -32,6 +32,14 @@
     .contact-inner-wrapper {
         justify-content: space-around;
     }
+
+    .single-project-top-full-width {
+        .project-container-image img {
+            max-width: 50%;   
+            height: auto;
+            top: 20%;
+        }
+    }
 }
 
 @media only screen and (max-width: 900px) {
@@ -148,5 +156,11 @@
     .footer-links {
         flex-direction: column;
         gap: 4rem;
+    }
+
+    .single-project-top-full-width {
+        .project-container-image {
+            display: none;
+        }
     }
 }
